# chuuni-keys

./: .dockerignore  .gitignore  README.md  debian-build.dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  app.tsx  decs.d.ts  main.tsx  styles.css  titlebar.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/deb/: postremove.sh
src-tauri/icons/: icon.icns
src-tauri/installer/: labels.nsh
src-tauri/nsis/: hooks.nsh
src-tauri/resources/charts/T9yeBoB8Xl no title yet/: chart.txt  metadata.json
src-tauri/resources/charts/cqxJqRWfHq Neppa (English ver.)/: metadata.json
src-tauri/resources/charts/tRPI-v6nic Magnetic/: metadata.json
src-tauri/resources/default_charts/5cgPGcHKq4 Nanatsu Issenzakura/: chart.txt  metadata.json
src-tauri/resources/default_charts/HYpD2Psnf0 Leviteto/: chart.txt  metadata.json
src-tauri/resources/default_charts/T9yeBoB8Xl no title yet/: leaderboard.csv
src-tauri/resources/default_charts/XwcbeaNicb hesitation/: chart.txt  metadata.json
src-tauri/resources/default_charts/cqxJqRWfHq Neppa (English ver.)/: chart.txt
src-tauri/resources/default_charts/m7oxBXhCWU Xue Mao Jiao/: chart.txt  metadata.json
src-tauri/resources/default_charts/tRPI-v6nic Magnetic/: chart.txt  leaderboard.csv  metadata.json
src-tauri/src/: charts.rs  lib.rs  main.rs  muse.rs  muse_fs.rs  publish.rs  static_server.rs
src-tauri/src/muse_data/: charts.rs  mod.rs
src/components/: accuracy-bar.tsx  background.tsx  chart-listing-link.tsx  external-url.tsx  (+16 more)
(+68 files in other folders)
