[package]
name = "chuuni-keys"
version = "1.0.4"
description = "Keyboard based rhythm game."
authors = ["troylu8"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chuuni_keys_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
rand = "0.9.1"
tauri-plugin-process = "2"
tauri-plugin-prevent-default = { version = "2.1.1", features = ["unstable-windows"] }
tauri-plugin-dialog = "2"
zip = "4.2.0"
tauri-plugin-deep-link = "2"
filenamify = "0.1"
tauri-plugin-os = "2"
rouille = "3.6.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }

